Fixes ClustalO bug

--- a/database/templates/database/clade_detail.html
+++ b/database/templates/database/clade_detail.html
@@ -283,7 +283,7 @@ $(function()
     downloadInnerHtml(fileName, 'OverviewSVG','text/html');
 });
 
-  var fasta = `{{alignment|safe}}`;
+  var fasta = {{ alignment_json|safe }};
   var aligned_seqs =  msa.io.fasta.parse(fasta);
 
 
